new file:   images/o-400.png 	new file:   images/x-400.png 	modified:   index.html 	modified:   jogodavelha.js 	modified:   jv.css

--- a/jv.css
+++ b/jv.css
@@ -1,8 +1,12 @@
-body{
-
+p{
+    position: static;
+    color: white;
+    margin-left: 40%;
+   
+    
 }
+
 body div{
-    background: black;
     width: 500px;
     height: 500px;
 }
